--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
   
   h1,
   h2,
-  h3,
+  h3,  
   h4 {
     font-family: 'Play', sans-serif;
     color: #87CEEB;
@@ -69,22 +69,13 @@
     text-transform: uppercase;
     font-size: 2rem;
   }
-  .title.\--xl-large {
+
+  .GOScreen {
+    text-transform: uppercase;
     display: block;
     position: relative;
     font-size: 6rem;
     letter-spacing: 10px;
-
-  }
-  .title.\--xl-large:before {
-    content: '';
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 60%;
-    height: 4px;
-    transform: rotate(-10deg);
-    background-color: #111;
   }
   
   /*---
@@ -133,7 +124,7 @@
     padding: 2rem 0;
   }
   
-  /* .level-header .container {
+  .level-header .container {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -143,22 +134,21 @@
   
   .level-header__title,
   .level-header__score {
-    /* width: 40%; */
+   width: 40%; 
   }
   
   .level-header h2,
   .level-header h4 {
     display: inline;
   }
-   */
    
-  .level-arena {
+  /* .level-arena {
     position: absolute;
     top: 0;
     left: 0;
     height: 100vh;
     width: 100vw;
-  }
+  } */
   
   /* change to level end if Katalina is hit */
   .game-over {
@@ -170,15 +160,14 @@
     background-color: #111;
     text-align: center;
     z-index: 10;
-    opacity: 0;
     pointer-events: none;
     transition: all 250ms ease;
   }
   
-  .game-over {
+  /* .game-over {
     opacity: 0;
     pointer-events: all;
-  }
+  } */
   
   .level-footer {
     position: absolute;
